[package]
name = "ussrp3n"
version = "0.1.0"
authors = ["Dawid J. Kubis <dawid.kubis3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.9"
reqwest = {version="0.10.1", features=["socks", "blocking"]}
